# bili_login

./: README.md  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  codec.rs  main.rs
src-tauri/src/http/: mod.rs  send.rs
