[package]
name = "BiliLogin"
version = "0.1.0"
description = "BiliLogin"
authors = ["shanmite"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all", "http-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
lazy_static = "1.5.0"
base64 = "0.22.1"
rand = "0.8.5"
rsa = "0.9.6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
